fix: disable hover effects on mobile devices for the all-pokemon-btn

--- a/css/layout.css
+++ b/css/layout.css
@@ -438,6 +438,11 @@ body #big-container aside .filter-section .filter-actions .clear-filters {
         padding: 6px;
     }
 
+    body #big-container header #options .all-pokemons-btn:hover {
+        background-color: transparent;
+        color: var(--type-water);
+    }
+
     body #big-container header #options .setting {
         font-size: smaller;
     }
